<resources>
    <string name="app_name">TourifyApp</string>

    <string name="title_logo">TourIFY</string>
    <string name="logo_tourify">Logo Tourify</string>
    <string name="abstract1">Abstract 1</string>
    <string name="make_your_dream_trip_come_true">Make Your Dream Trip Come True</string>
    <string name="template_description">C\'mon, he\'s not that bad. At least he\'s letting you borrow the car tomorrow night. Ho ho ho, look at it roll. Now we could watch Jackie Gleason while we eat. I guarantee it. Whoa, wait, Doc. Let\'s get him.</string>
    <string name="headline">Headline</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="finish">Get Started!</string>
    <string name="on">On</string>
    <string name="off">Off</string>

    <string name="headline_on_boarding1">Tourism Recommendations</string>
    <string name="caption_on_boarding1">We will recommend a suitable place for you according to your preferences.</string>

    <string name="headline_on_boarding2">Explore the world to find a great place</string>
    <string name="caption_on_boarding2">You can also explore the available tourist attractions to find a suitable place for a vacation.</string>
    <string name="headline_on_login">Welcome to TourIFY</string>
    <string name="caption_on_login">Stay signed in with your account to explore your destinations</string>
    <string name="image_on_loginactivity">Image on LoginActivity</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="suggestion2register">Don’t Have an Account?</string>
    <string name="register_now">Register Now!</string>
    <string name="register">Register</string>
    <string name="registerCaption">Create your account and start your journey with us</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="submit">Submit</string>

    <string name="email_empty">Email Must Be Filled</string>
    <string name="password_empty">Password Must Be Filled</string>
    <string name="password_confirmation_empty">Password Confirmation Must Be Filled</string>
    <string name="email_n_password_empty">Email and Password Must Be Filled</string>
    <string name="full_name_empty">Full Name Must Be Filled</string>
    <string name="email_invalid">Format Email is Invalid</string>
    <string name="password_minimum_character">Password Must Be at Least 8 Characters</string>
    <string name="password_not_match">Password entered is not the same</string>
    <string name="account_already_registered">Your account is created and ready to use. Login and see what other people is up to!</string>
    <string name="full_name">Full Name</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="notification">Notification</string>
    <string name="caption_on_dashboard">Where do you want to go?</string>
    <string name="recommended">Recommended</string>
    <string name="special_for_you">Special For You</string>
    <string name="favourite_button">Favourite Button</string>
    <string name="placeholder_image_onboarding">Placeholder Image OnBoarding</string>

    <string name="tab_text_1">Overview</string>
    <string name="tab_text_2">Feedback</string>
    <string name="tmp_description">Name Place is one of the world’s new holiday destinations in Bali. Located on the southeast of the island of Bali.</string>
    <string name="field_feedback">Write your feedback....</string>
    <string name="check_on_map">Check on Map</string>
    <string name="name_item_3">Days</string>
    <string name="content_desc_photo_on_detail">Photo of the place</string>
    <string name="name_place">Name Place</string>
    <string name="content_desc_icon_rating">Icon Rating</string>
    <string name="placeholder_value_rating">4.9</string>
    <string name="total_feedback">(100)</string>
    <string name="content_desc_abstract">Abstrak 2</string>
    <string name="title_on_register">Create Account</string>
    <string name="button_back">Button Back</string>
    <string name="title_feedback_dialog">FeedBack</string>
    <string name="desc_feedback_dialog">Please take a moment to share your feedback and rate your visit.</string>
    <string name="title_change_pw_dialog">Change Password</string>
    <string name="change">Change</string>
    <string name="content_desc_add_review">Add new review</string>
    <string name="username_account">C23-PS424</string>
    <string name="icon_item_1">Icon Item 1</string>
    <string name="name_item_1">Category</string>
    <string name="value_item_1">Budaya</string>
    <string name="icon_item_2">Icon Item 2</string>
    <string name="value_item_2">35.000</string>
    <string name="name_item_2">Price</string>
    <string name="icon_item_3">Icon Item 3</string>
    <string name="value_item_3">Mo - Fri</string>
    <string name="button_favourite">Button Favourite</string>
    <string name="email_user_account">mail@mail.com</string>
    <string name="content_dsc_icon_location">Icon Location</string>
    <string name="location">Surabaya</string>
    <string name="tv_account">Account</string>
    <string name="item_setting_1">Edit Password</string>
    <string name="desc_item_1">Change your current password</string>
    <string name="tv_preferences">Preferences</string>
    <string name="item_setting_2">Dark Theme</string>
    <string name="desc_item_2">Change your current theme</string>
    <string name="item_setting_3">Language</string>
    <string name="desc_item_3">Change your primary language</string>
    <string name="item_setting_4">Info</string>
    <string name="desc_item_4">Check information about version app</string>
    <string name="item_setting_5">Logout</string>
    <string name="desc_item_5">Log out of your current account</string>
    <string name="icon_item_4">Icon Item 4</string>
    <string name="content_desc_logo_app">Logo App</string>
    <string name="desc_info_dialog">Tourist destination recommendation system application that matches the input criteria from the user.</string>
    <string name="tv_changelog">Changelog</string>
    <string name="icon_check">Icon Check</string>
    <string name="tv_changelog_1">Show 10 top tourist destination recommendation in Surabaya</string>
    <string name="tv_changelog_2">Filtering by highest rating</string>
    <string name="tv_changelog_3">Show travel destination intetresting place</string>
    <string name="tv_contact_us">Contact Us</string>
    <string name="tv_email">dev.tourify@gmail.com</string>
    <string name="tv_number">087757913486</string>
    <string name="tmp_version_app">Version 1.0.0</string>

    <string name="style_maps">Style Maps</string>
    <string name="normal">Normal</string>
    <string name="satellite">Satellite</string>
    <string name="terrain">Terrain</string>
    <string name="hybrid">Hybrid</string>
    <string name="error_message_location">Location unavailable</string>
    <string name="error_message_catch">An error occurred when getting the location</string>
    <string name="error_message_style">Style parsing failed</string>
    <string name="error_message_style_catch">Can\'t find style. Error: </string>
</resources>