<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.cardview.widget.CardView
        android:layout_width="365dp"
        android:layout_height="525dp"
        android:outlineAmbientShadowColor="@color/shadowColor"
        android:outlineSpotShadowColor="@color/shadowColor"
        app:cardCornerRadius="25dp"
        style="@style/CardViewStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="p">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <androidx.cardview.widget.CardView
                android:id="@+id/container_btn_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/red_200"
                android:paddingBottom="12dp"
                app:cardCornerRadius="18dp"
                app:cardElevation="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageButton
                    android:id="@+id/btn_close"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:contentDescription="@string/favourite_button"
                    android:focusable="true"
                    android:src="@drawable/baseline_close_24" />
            </androidx.cardview.widget.CardView>

            <ImageView
                android:id="@+id/logo_app"
                android:layout_width="174dp"
                android:layout_height="64dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="6dp"
                android:contentDescription="@string/content_desc_logo_app"
                android:src="@drawable/logo_long"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/container_btn_close" />

            <TextView
                android:id="@+id/description_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/textColorCaption2"
                android:fontFamily="@font/fo_nunito_sans_reguler"
                android:text="@string/desc_info_dialog"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@+id/logo_app" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="28dp"
                android:fontFamily="@font/fo_nunito_sans_extra_bold"
                android:text="@string/tv_changelog"
                style="@style/TextViewStyle"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/description_app"
                tools:layout_editor_absoluteX="32dp" />

            <LinearLayout
                android:id="@+id/container_item_changelog"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="@+id/textView4"
                app:layout_constraintStart_toStartOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/textView4">

                <LinearLayout
                    android:id="@+id/fitur1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingHorizontal="16dp"
                    android:paddingBottom="8dp"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="@string/icon_check"
                        android:src="@drawable/ic_check" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:textColor="@color/textColorCaption2"
                        android:text="@string/tv_changelog_1"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/fitur2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingHorizontal="16dp"
                    android:paddingBottom="8dp"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="@string/icon_check"
                        android:src="@drawable/ic_check" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:textColor="@color/textColorCaption2"
                        android:text="@string/tv_changelog_2"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingHorizontal="16dp"
                    android:paddingBottom="8dp"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="@string/icon_check"
                        android:src="@drawable/ic_check" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/textColorCaption2"
                        android:paddingHorizontal="16dp"
                        android:text="@string/tv_changelog_3"
                        android:textSize="14sp" />

                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/contact_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/fo_nunito_sans_extra_bold"
                android:text="@string/tv_contact_us"
                style="@style/TextViewStyle"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/container_item_changelog"
                tools:layout_editor_absoluteX="32dp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="@+id/contact_us"
                app:layout_constraintStart_toStartOf="@+id/contact_us"
                app:layout_constraintTop_toBottomOf="@+id/contact_us">

                <LinearLayout
                    android:id="@+id/contact_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingHorizontal="16dp"
                    android:paddingBottom="8dp"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_email" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingHorizontal="16dp"
                        android:textColor="@color/textColorCaption2"
                        android:text="@string/tv_email"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/contact_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingHorizontal="16dp"
                    android:paddingBottom="8dp"
                    app:layout_constraintEnd_toEndOf="@+id/textView"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="@+id/textView"
                    app:layout_constraintTop_toBottomOf="@+id/fitur2">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_call" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingHorizontal="16dp"
                        android:text="@string/tv_number"
                        android:textColor="@color/textColorCaption2"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/fo_nunito_sans_light"
                android:text="@string/tmp_version_app"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>