<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterActivity">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:elevation="15dp"
        tools:visibility="visible"
        android:layout_centerInParent="true"/>

    <View
        android:id="@+id/overlay_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorOverlay"
        android:elevation="14dp"
        android:visibility="gone"
        android:clickable="true"
        tools:visibility="visible"
        android:focusable="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/container_rounded1"
                android:layout_marginTop="45dp"
                android:layout_marginHorizontal="28dp"
                android:rotation="180"
                android:src="@drawable/baseline_arrow_right_alt_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="234dp"
                android:layout_height="42dp"
                android:fontFamily="@font/fo_gilroy_black"
                android:text="Create Account"
                android:layout_marginTop="45dp"
                android:textColor="#535454"
                android:textSize="32sp"
                app:layout_constraintStart_toStartOf="@+id/btn_back"
                app:layout_constraintTop_toBottomOf="@+id/btn_back" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/fo_nunito_sans_reguler"
                android:text="@string/registerCaption"
                android:textColor="#A9A9A9"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-130dp"
                android:layout_marginEnd="-130dp"
                android:src="@drawable/abtract2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="Abstrak 2" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="18dp"
                android:layout_marginTop="52dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.devcode.tourifyapp.ui.customView.CustomEditText
                    android:id="@+id/ed_register_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="18dp"
                    android:drawableStart="@drawable/ic_user"
                    android:drawablePadding="8dp"
                    android:hint="@string/full_name"
                    android:inputType="textEmailAddress"
                    android:minHeight="56dp"
                    android:paddingHorizontal="18dp"
                    android:textColor="@color/textColorCaption"
                    android:textColorHint="@color/textColorCaption2"
                    android:textSize="12sp" />

                <com.devcode.tourifyapp.ui.customView.CustomEditText
                    android:id="@+id/ed_register_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="18dp"
                    android:drawableStart="@drawable/ic_message"
                    android:drawablePadding="8dp"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:minHeight="56dp"
                    android:paddingHorizontal="18dp"
                    android:textColor="@color/textColorCaption"
                    android:textColorHint="@color/textColorCaption2"
                    android:textSize="12sp" />

                <com.devcode.tourifyapp.ui.customView.CustomEditText
                    android:id="@+id/ed_register_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="18dp"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:minHeight="56dp"
                    android:paddingHorizontal="18dp"
                    android:textColor="@color/textColorCaption"
                    android:textColorHint="@color/textColorCaption2"
                    android:textSize="12sp" />

                <com.devcode.tourifyapp.ui.customView.CustomEditText
                    android:id="@+id/ed_register_confirmPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="18dp"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:minHeight="56dp"
                    android:paddingHorizontal="18dp"
                    android:textColor="@color/textColorCaption"
                    android:textColorHint="@color/textColorCaption2"
                    android:textSize="12sp" />
            </LinearLayout>

            <com.devcode.tourifyapp.ui.customView.CustomButton
                android:id="@+id/button_register"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:background="@drawable/style_button"
                android:fontFamily="@font/fo_nunito_sans_bold"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="@+id/linearLayout"
                app:layout_constraintStart_toStartOf="@+id/linearLayout"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <LinearLayout
                android:id="@+id/suggest_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="32dp"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_register">
                <TextView
                    android:id="@+id/txt_already_have_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/fo_nunito_sans_reguler"
                    android:text="@string/already_have_an_account"/>
                <TextView
                    android:id="@+id/txt_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/orange_400"
                    android:fontFamily="@font/fo_nunito_sans_bold"
                    android:text="@string/btn_login"/>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</RelativeLayout>