<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <ImageView
        android:id="@+id/iv_post_image"
        android:layout_width="match_parent"
        android:layout_height="335dp"
        android:contentDescription="@string/content_desc_photo_on_detail"
        android:foreground="@drawable/bg_bottom_gradient_shadow"
        android:scaleType="centerCrop"
        android:src="@drawable/klenteng"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="-26dp"
        android:background="@drawable/field_rounded"
        android:orientation="vertical"
        android:paddingTop="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_post_image">

        <TextView
            android:id="@+id/tv_post_title"
            style="@style/TextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/fo_nunito_sans_extra_bold"
            android:text="@string/name_place"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/content_desc_icon_rating"
                android:src="@drawable/star" />

            <TextView
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/fo_nunito_sans_light"
                android:text="@string/placeholder_value_rating"
                android:maxLength="3"
                android:textColor="@color/textColorCaption2"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/total_feed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/fo_nunito_sans_light"
                android:text="@string/total_feedback"
                android:textColor="@color/textColorCaption2"
                android:textSize="14sp" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingHorizontal="32dp"
            android:paddingVertical="25dp">

            <View
                android:id="@+id/indicator"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:background="@drawable/gradient_bg" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tablayout_on_detail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/tab_bg"
                app:tabGravity="fill"
                app:tabIndicatorColor="@null"
                app:tabIndicatorHeight="0dp"
                app:tabMode="fixed"
                app:tabRippleColor="@null"
                app:tabSelectedTextAppearance="@style/TabLayoutTextAppearance.Selected"
                app:tabSelectedTextColor="@color/white"
                app:tabTextAppearance="@style/TabLayoutTextAppearance"
                app:tabTextColor="@color/textColorCaption2" />
        </FrameLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager_content_on_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarId"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
        app:titleTextColor="?attr/colorPrimaryVariant" />
</androidx.constraintlayout.widget.ConstraintLayout>
